[gd_scene load_steps=6 format=3 uid="uid://b8qlwr02so83n"]

[ext_resource type="Texture2D" uid="uid://dw6ql85sgyme8" path="res://Assets/cuaderno.png" id="1_jvr2v"]
[ext_resource type="Script" uid="uid://dvnf6bjj7uswk" path="res://Scripts/libreta.gd" id="1_mhhel"]
[ext_resource type="FontFile" uid="uid://ju386i3tvfhc" path="res://Fonts/PatrickHand-Regular.ttf" id="2_5qa8i"]
[ext_resource type="Texture2D" uid="uid://rbow6b4x0rgv" path="res://Assets/UI/boton cuaderno.png" id="4_4vfv0"]
[ext_resource type="Texture2D" uid="uid://b50gqhbrj3i2y" path="res://Assets/UI/boton cuaderno hover.png" id="5_y6jhn"]

[node name="libreta" type="Node2D"]
script = ExtResource("1_mhhel")

[node name="SpriteLibreta" type="Sprite2D" parent="."]
texture = ExtResource("1_jvr2v")

[node name="LabelNombre" type="Label" parent="."]
offset_left = -434.0
offset_top = -116.0
offset_right = -352.0
offset_bottom = -84.0
theme_override_colors/font_color = Color(0.29411766, 0.22352941, 0.12941177, 1)
theme_override_fonts/font = ExtResource("2_5qa8i")
theme_override_font_sizes/font_size = 23

[node name="LabelApellido" type="Label" parent="."]
offset_left = -434.0
offset_top = -56.0
offset_right = -352.0
offset_bottom = -24.0
theme_override_colors/font_color = Color(0.29411766, 0.22352941, 0.12941177, 1)
theme_override_fonts/font = ExtResource("2_5qa8i")
theme_override_font_sizes/font_size = 23

[node name="Persona" type="Sprite2D" parent="."]
position = Vector2(-396.3333, -221.99998)
scale = Vector2(0.5185185, 0.5185185)

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 613.0
offset_top = -521.0
offset_right = 752.0
offset_bottom = -382.0
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("4_4vfv0")
texture_pressed = ExtResource("5_y6jhn")
texture_hover = ExtResource("5_y6jhn")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
